--- a/demo.html
+++ b/demo.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>像素颜色标注工具</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        background-color: #f5f5f5;
+    }
+    h1 {
+        text-align: center;
+        color: #333;
+    }
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    #upload {
+        display: block;
+        margin: 0 auto 20px;
+        padding: 10px;
+        font-size: 16px;
+    }
+    .controls {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .controls label {
+        margin-right: 10px;
+    }
+    .controls input {
+        width: 80px;
+        padding: 5px;
+        text-align: center;
+    }
+    button {
+        padding: 8px 16px;
+        font-size: 16px;
+        cursor: pointer;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+    }
+    button:hover {
+        background-color: #45a049;
+    }
+    #canvas {
+        display: block;
+        margin: 0 auto;
+        border: 1px solid #ccc;
+        background-color: #f0f0f0;
+    }
+    #output {
+        margin-top: 20px;
+        white-space: pre-wrap;
+        font-family: monospace;
+        background-color: #eee;
+        padding: 10px;
+        border-radius: 4px;
+        max-height: 300px;
+        overflow-y: auto;
+    }
+</style>
 </head>
 <body>
-    demo
-    aaaaaaaa
+
+<h1>像素颜色标注工具</h1>
+
+<div class="container">
+    <input type="file" id="upload" accept="image/*">
+
+    <div class="controls">
+        <label>宽度：</label>
+        <input type="number" id="width" value="100" min="1">
+        <label>高度：</label>
+        <input type="number" id="height" value="100" min="1">
+        <button onclick="processImage()">生成并标注颜色</button>
+    </div>
+
+    <canvas id="canvas"></canvas>
+
+    <div id="output"></div>
+</div>
+
+<script>
+let originalImage = null;
+
+document.getElementById('upload').addEventListener('change', function(e) {
+    const file = e.target.files[0];
+    if (!file) return;
+    const reader = new FileReader();
+    reader.onload = function(ev) {
+        const img = new Image();
+        img.onload = function() {
+            originalImage = img;
+            // 显示原始图片到canvas
+            const canvas = document.getElementById('canvas');
+            const ctx = canvas.getContext('2d');
+            canvas.width = img.width;
+            canvas.height = img.height;
+            ctx.drawImage(img, 0, 0);
+        };
+        img.src = ev.target.result;
+    };
+    reader.readAsDataURL(file);
+});
+
+function processImage() {
+    if (!originalImage) {
+        alert('请先上传图片');
+        return;
+    }
+    const width = parseInt(document.getElementById('width').value);
+    const height = parseInt(document.getElementById('height').value);
+
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+
+    // 调整图片大小
+    canvas.width = width;
+    canvas.height = height;
+    ctx.drawImage(originalImage, 0, 0, width, height);
+
+    // 获取像素数据
+    const imageData = ctx.getImageData(0, 0, width, height);
+    const data = imageData.data;
+
+    let outputText = '';
+    // 遍历每个像素
+    for (let y = 0; y < height; y++) {
+        for (let x = 0; x < width; x++) {
+            const index = (y * width + x) * 4;
+            const r = data[index];
+            const g = data[index + 1];
+            const b = data[index + 2];
+            const a = data[index + 3];
+
+            // 转为十六进制颜色
+            const hex = rgbToHex(r, g, b);
+            outputText += `${hex} `;
+
+            // 在像素内标注颜色
+            ctx.fillStyle = '#000';
+            ctx.font = '8px Arial';
+            ctx.fillText(hex, x, y + 8);
+        }
+        outputText += '\n';
+    }
+
+    document.getElementById('output').textContent = outputText;
+}
+
+function rgbToHex(r, g, b) {
+    return '#' + ((1 << 24) + (r << 16) + (g << 8) + b).toString(16).slice(1);
+}
+</script>
+
 </body>
 </html>
